--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	
-	<h1>Esta es mi primera página web con Angular JS</h1>
+	<!--h1>Esta es mi primera página web con Angular JS</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -21,14 +21,21 @@
 
 	<h3>
 	{{"Hello " + "Eduardo"}}
-	</h3>
+	</h3>-->
 
-	<div ng-controller="StoreController as Store">
-	<h3>{{store.product.name}}
-	<em class="product row">
-	</h3>
-</div>
-</em>
+	<div class="container" ng-controller="StoreController as store">
+		<div class="product row" class="list-group" ng-repeat="product in
+		store.products">
+		<div class="list-group-item">
+			<h1>{{product.name}}</h1>
+			<em class="pull-right"><h4>{{product.price | currency}}</h4></em>
+			<p>{{product.description}}</p>
+			<button class="btn btn-danger" >Add to Cart</button>
+			</div>
+		</div>
+	</div>
+
+
 	<script src="js/angular.min.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/bootstrap.min.js"></script>
